Completion of NLP section

--- a/nlp-moses-notebook.ipynb
+++ b/nlp-moses-notebook.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "##print(id2line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##print(convos_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,10 +94,363 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##print(questions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##print(answers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_text(text):\n",
+    "    text = text.lower()\n",
+    "    text = re.sub(r\"i'm\",\"i am\", text)\n",
+    "    text = re.sub(r\"it's\",\"it is\", text)\n",
+    "    text = re.sub(r\"he's\",\"he is\", text)\n",
+    "    text = re.sub(r\"she's\",\"she is\", text)\n",
+    "    text = re.sub(r\"that's\",\"that is\", text)\n",
+    "    text = re.sub(r\"what's\",\"what is\", text)\n",
+    "    text = re.sub(r\"where's\",\"where is\", text)\n",
+    "    text = re.sub(r\"\\'ll\",\" will\", text)\n",
+    "    text = re.sub(r\"\\'ve\",\" have\", text)\n",
+    "    text = re.sub(r\"\\'re\",\" are\", text)\n",
+    "    text = re.sub(r\"\\'d\",\" would\", text)\n",
+    "    text = re.sub(r\"won't\",\"will not\", text)\n",
+    "    text = re.sub(r\"don't\",\"do not\", text)\n",
+    "    text = re.sub(r\"can't\",\"cannot\", text)\n",
+    "    text = re.sub(r\"couldn't\",\"could not\", text)\n",
+    "    text = re.sub(r\"wouldn't\",\"would not\", text)\n",
+    "    text = re.sub(r\"shouldn't\",\"should not\", text)\n",
+    "    text = re.sub(r\"[-()\\\"#/@;:<>{}+=~|.?!,]\",\"\", text)\n",
+    "    return text\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_questions = []\n",
+    "\n",
+    "for question in questions:\n",
+    "    clean_questions.append(clean_text(question))\n",
+    "\n",
+    "##print(clean_questions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_answers = []\n",
+    "\n",
+    "for answer in answers:\n",
+    "    clean_answers.append(clean_text(answer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word2count = {}\n",
+    "\n",
+    "for question in clean_questions:\n",
+    "    for word in question.split():\n",
+    "        if word not in word2count:\n",
+    "            word2count[word] = 1\n",
+    "        else:\n",
+    "            word2count[word] += 1\n",
+    "\n",
+    "for answer in clean_answers:\n",
+    "    for word in answer.split():\n",
+    "        if word not in word2count:\n",
+    "            word2count[word] = 1\n",
+    "        else:\n",
+    "            word2count[word] += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##print(len(word2count))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold = 20\n",
+    "\n",
+    "questionswords2int = {}\n",
+    "wd_num = 0\n",
+    "\n",
+    "for word, count in word2count.items():\n",
+    "    if count >= threshold:\n",
+    "        questionswords2int[word] = wd_num\n",
+    "        wd_num += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##print(questionswords2int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answerswords2int = {}\n",
+    "wd_num = 0\n",
+    "\n",
+    "for word, count in word2count.items():\n",
+    "    if count >= threshold:\n",
+    "        answerswords2int[word] = wd_num\n",
+    "        wd_num += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens = ['<PAD>','<EOS>','<OUT>','<SOS>']\n",
+    "\n",
+    "for token in tokens:\n",
+    "    questionswords2int[token] = len(questionswords2int) + 1\n",
+    "\n",
+    "for token in tokens:\n",
+    "    answerswords2int[token] = len(answerswords2int) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answersints2words = {w_i: w for w, w_i in answerswords2int.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(clean_answers)):\n",
+    "    clean_answers[i] += ' <EOS>'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "questions_2_int = []\n",
+    "\n",
+    "for question in clean_questions:\n",
+    "    ints = []\n",
+    "    for word in question.split():\n",
+    "        if word not in questionswords2int:\n",
+    "            ints.append(questionswords2int['<OUT>'])\n",
+    "        else:\n",
+    "            ints.append(questionswords2int[word])\n",
+    "    \n",
+    "    questions_2_int.append(ints)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answers_2_int = []\n",
+    "\n",
+    "for answer in clean_answers:\n",
+    "    ints = []\n",
+    "    for word in answer.split():\n",
+    "        if word not in answerswords2int:\n",
+    "            ints.append(answerswords2int['<OUT>'])\n",
+    "        else:\n",
+    "            ints.append(answerswords2int[word])\n",
+    "    \n",
+    "    answers_2_int.append(ints)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_clean_questions = []\n",
+    "sorted_clean_answers = []\n",
+    "\n",
+    "for length in range(1, 25 +1):\n",
+    "    for i in enumerate(questions_2_int):\n",
+    "        if len(i[1]) == length:\n",
+    "            sorted_clean_questions.append(questions_2_int[i[0]])\n",
+    "            sorted_clean_answers.append(answers_2_int[i[0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "################################### Tensorflow section Below #########################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### The placeholder perm for model's inputs and targets\n",
+    "def model_inputs():\n",
+    "    inputs = tf.placeholder(tf.int32, [None, None], name = 'input')\n",
+    "    targets = tf.placeholder(tf.int32, [None, None], name = 'target')\n",
+    "    lr = tf.placeholder(tf.float32, name = 'learning_rate')\n",
+    "    keep_prob = tf.placeholder(tf.float32, name = 'keep_prob')\n",
+    "    return inputs, targets, lr, keep_prob\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### preprocessing targets\n",
+    "def preprocess_targets(targets, word2int, batch_size):\n",
+    "    left_side = tf.fill([batch_size, 1], word2int['<SOS>'])\n",
+    "    right_side = tf.strided_slice(targets, [0,0], [batch_size, -1], [1,1])\n",
+    "    preprocessed_targets = tf.concat([left_side, right_side], 1)\n",
+    "    return preprocessed_targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Create the encoder RNN layer\n",
+    "def encoder_rnn(rnn_inputs, rnn_size, num_layers, keep_prob, sequence_length):\n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "    lstm_dropout = tf.contrib.rnn.DropoutWrapper(lstm, input_keep_prob = keep_prob)\n",
+    "    encoder_cell = tf.contrib.rnn.MultiRNNCell([lstm_dropout] * num_layers)\n",
+    "    _, encoder_state = tf.nn.bidirectional_dynamic_rnn(cell_fw = encoder_cell, \n",
+    "                                                       cell_bw = encoder_cell,\n",
+    "                                                       sequence_length = sequence_length,\n",
+    "                                                       inputs = rnn_inputs,\n",
+    "                                                       dtype = tf.float32)\n",
+    "    return encoder_state\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### First part of three... ###\n",
+    "### Decoding the training set\n",
+    "def decode_training_set(encoder_state, decoder_cell, decoder_embedded_input, sequence_length, decoding_scope, output_function, keep_prob, batch_size):\n",
+    "    attention_states = tf.zeros([batch_size, 1, decoder_cell.output_size])\n",
+    "    attention_keys, attention_values, attention_score_function, attention_construct_function = tf.contrib.seq2seq.prepare_attention(attention_states, attention_option = 'bahdanau', num_units = decoder_cell.output_size)\n",
+    "    training_decoder_function = tf.contrib.seq2seq.attention_decoder_fn_train(encoder_state[0], \n",
+    "                                                                              attention_keys, \n",
+    "                                                                              attention_values, \n",
+    "                                                                              attention_score_function, \n",
+    "                                                                              attention_construt_function,\n",
+    "                                                                              name = 'attn_dec_train')\n",
+    "    decoder_output, _, _ = tf.contrib.seq2seq.dynamic_rnn_decoder(decoder_cell,\n",
+    "                                                                  training_decoder_function,\n",
+    "                                                                  decoder_embedded_input,\n",
+    "                                                                  sequence_input,\n",
+    "                                                                  scope = decoding_scope)\n",
+    "    decoder_output_dropout = tf.nn.dropout(decoder_output, keep_prob)\n",
+    "    return output_function(decoder_output_dropout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Second part of three ###\n",
+    "### Decoding the test/valuation set \n",
+    "def decode_test_set(encoder_state, decoder_cell, decoder_embeddings_matrix, sos_id, eos_id, maximum_length, num_words, sequence_length, decoding_scope, output_function, keep_prob, batch_size):\n",
+    "    attention_states = tf.zeros([batch_size, 1, decoder_cell.output_size])\n",
+    "    attention_keys, attention_values, attention_score_function, attention_construct_function = tf.contrib.seq2seq.prepare_attention(attention_states, attention_option = 'bahdanau', num_units = decoder_cell.output_size)\n",
+    "    test_decoder_function = tf.contrib.seq2seq.attention_decoder_fn_inference(output_function,\n",
+    "                                                                              encoder_state[0], \n",
+    "                                                                              attention_keys, \n",
+    "                                                                              attention_values, \n",
+    "                                                                              attention_score_function, \n",
+    "                                                                              attention_construt_function,\n",
+    "                                                                              decoder_embeddings_matrix, \n",
+    "                                                                              sos_id, \n",
+    "                                                                              eos_id, \n",
+    "                                                                              maximum_length, \n",
+    "                                                                              num_words,\n",
+    "                                                                              name = 'attn_dec_inf')\n",
+    "    decoder_output, _, _ = tf.contrib.seq2seq.dynamic_rnn_decoder(decoder_cell,\n",
+    "                                                                  test_decoder_function,\n",
+    "                                                                  scope = decoding_scope)\n",
+    "\n",
+    "    return test_predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Third part of three ###\n",
+    "### "
+   ]
   }
  ],
  "metadata": {
