--- a/nlp-moses-notebook.ipynb
+++ b/nlp-moses-notebook.ipynb
@@ -444,12 +444,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Third part of three ###\n",
-    "### "
+    "### Creating the decoder RNN\n",
+    "def decoder_rnn(decoder_embedded_input, decoder_embeddings_matrix, encoder_state, num_words, sequence_length, rnn_size, num_layers, words2int, keep_prob, batch_size):\n",
+    "    with tf.varible_scope(\"decoding\") as decoding_scope:\n",
+    "        lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "        lstm_dropout = tf.contrib.rnn.DropoutWrapper(lstm, input_keep_prob = keep_prob)\n",
+    "        decoder_cell = tf.contrib.rnn.MultiRNNCell([lstm_dropout] * num_layers)\n",
+    "        weights = tf.truncated_normal_initializer(stddev = 0.1)\n",
+    "        biases = tf.zeros_initializer()\n",
+    "        output_function = lambda x: tf.contrib.layers.fully_connected(x,\n",
+    "                                                                      num_words,\n",
+    "                                                                      None,\n",
+    "                                                                      scope = decoding_scope,\n",
+    "                                                                      weights_initializer = weights,\n",
+    "                                                                      biases_initializer = biases)\n",
+    "        training_predictions = decode_training_set(encoder_state,\n",
+    "                                                   decoder_cell,\n",
+    "                                                   decoder_embedded_input,\n",
+    "                                                   sequence_length,\n",
+    "                                                   decoding_scope,\n",
+    "                                                   output_function,\n",
+    "                                                   keep_prob,\n",
+    "                                                   batch_size)\n",
+    "        decoding_scope.reuse_variables()\n",
+    "        test_predictions = decode_test_set(encoder_state,\n",
+    "                                           decoder_cell,\n",
+    "                                           decoder_embeddings_matrix,\n",
+    "                                           word2int['<SOS>'],\n",
+    "                                           word2int['<EOS>'],\n",
+    "                                           sequence_length - 1,\n",
+    "                                           num_words,\n",
+    "                                           decoding_scope,\n",
+    "                                           output_function,\n",
+    "                                           keep_prob,\n",
+    "                                           batch_size)\n",
+    "    return training_predictions, test_predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Building the seq2seq model\n",
+    "def seq2seq_model(inputs, targets, keep_prob, batch_size, sequence_length, anwsers_num_words, questions_num_words, encoder_embedding_size, decoder_embedding_size, rnn_size, num_layers, questionswords2int):\n",
+    "    encoder_embedding_input = tf.contrib.layers.embed_sequence(inputs,\n",
+    "                                                               anwsers_num_words + 1,\n",
+    "                                                               encoder_embedding_size,\n",
+    "                                                               initializer = tf.random_uniform_initializer(0, 1))\n",
+    "    \n",
+    "    encoder_state = encoder_rnn(encoder_embedded_input, rnn_size, num_layers, keep_prob, sequence_length)\n",
+    "    preprocessed_targets = preprocess_targets(targets, questionswords2int, batch_size)\n",
+    "    decoder_embeddings_matrix = tf.Variable(tf.random_uniform([questions_num_words + 1, decoder_embedding_size], 0, 1))\n",
+    "    decoder_embedded_input = tf.nn.embedding_lookup(decoder_embeddings_matrix, preprocessed_targets)\n",
+    "    training_predictions, test_predictions = decoder_rnn(decoder_embedded_input,\n",
+    "                                                         decoder_embeddings_matrix,\n",
+    "                                                         decoder_state,\n",
+    "                                                         questions_num_words,\n",
+    "                                                         sequence_length,\n",
+    "                                                         rnn_size,\n",
+    "                                                         num_layer,\n",
+    "                                                         questionswords2int,\n",
+    "                                                         keep_prob,\n",
+    "                                                         batch_size)\n",
+    "    return training_predictions, test_predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "################################### Training seq2seq model #########################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Using the Hyperparameters "
    ]
   }
  ],
