--- a/nlp-moses-notebook.ipynb
+++ b/nlp-moses-notebook.ipynb
@@ -502,7 +502,6 @@
     "    encoder_state = encoder_rnn(encoder_embedded_input, rnn_size, num_layers, keep_prob, sequence_length)\n",
     "    preprocessed_targets = preprocess_targets(targets, questionswords2int, batch_size)\n",
     "    decoder_embeddings_matrix = tf.Variable(tf.random_uniform([questions_num_words + 1, decoder_embedding_size], 0, 1))\n",
-    "    decoder_embedded_input = tf.nn.embedding_lookup(decoder_embeddings_matrix, preprocessed_targets)\n",
     "    training_predictions, test_predictions = decoder_rnn(decoder_embedded_input,\n",
     "                                                         decoder_embeddings_matrix,\n",
     "                                                         decoder_state,\n",
@@ -531,7 +530,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Using the Hyperparameters "
+    "### Using the Hyperparameters \n",
+    "epochs = 100 ## reduce if training takes to long\n",
+    "batch_size = 64 ## include or decrease \n",
+    "rnn_size = 512\n",
+    "num_layers =  "
    ]
   }
  ],
