--- a/nlp-moses-notebook.ipynb
+++ b/nlp-moses-notebook.ipynb
@@ -406,7 +406,7 @@
     "    decoder_output, _, _ = tf.contrib.seq2seq.dynamic_rnn_decoder(decoder_cell,\n",
     "                                                                  training_decoder_function,\n",
     "                                                                  decoder_embedded_input,\n",
-    "                                                                  sequence_input,\n",
+    "                                                                  sequence_length,\n",
     "                                                                  scope = decoding_scope)\n",
     "    decoder_output_dropout = tf.nn.dropout(decoder_output, keep_prob)\n",
     "    return output_function(decoder_output_dropout)"
@@ -428,14 +428,14 @@
     "                                                                              attention_keys, \n",
     "                                                                              attention_values, \n",
     "                                                                              attention_score_function, \n",
-    "                                                                              attention_construt_function,\n",
+    "                                                                              attention_construct_function,\n",
     "                                                                              decoder_embeddings_matrix, \n",
     "                                                                              sos_id, \n",
     "                                                                              eos_id, \n",
     "                                                                              maximum_length, \n",
     "                                                                              num_words,\n",
     "                                                                              name = 'attn_dec_inf')\n",
-    "    decoder_output, _, _ = tf.contrib.seq2seq.dynamic_rnn_decoder(decoder_cell,\n",
+    "    test_predictions, _, _ = tf.contrib.seq2seq.dynamic_rnn_decoder(decoder_cell,\n",
     "                                                                  test_decoder_function,\n",
     "                                                                  scope = decoding_scope)\n",
     "\n",
@@ -451,7 +451,7 @@
     "### Third part of three ###\n",
     "### Creating the decoder RNN\n",
     "def decoder_rnn(decoder_embedded_input, decoder_embeddings_matrix, encoder_state, num_words, sequence_length, rnn_size, num_layers, words2int, keep_prob, batch_size):\n",
-    "    with tf.varible_scope(\"decoding\") as decoding_scope:\n",
+    "    with tf.variable_scope(\"decoding\") as decoding_scope:\n",
     "        lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
     "        lstm_dropout = tf.contrib.rnn.DropoutWrapper(lstm, input_keep_prob = keep_prob)\n",
     "        decoder_cell = tf.contrib.rnn.MultiRNNCell([lstm_dropout] * num_layers)\n",
@@ -494,7 +494,7 @@
    "source": [
     "### Building the seq2seq model\n",
     "def seq2seq_model(inputs, targets, keep_prob, batch_size, sequence_length, anwsers_num_words, questions_num_words, encoder_embedding_size, decoder_embedding_size, rnn_size, num_layers, questionswords2int):\n",
-    "    encoder_embedding_input = tf.contrib.layers.embed_sequence(inputs,\n",
+    "    encoder_embedded_input = tf.contrib.layers.embed_sequence(inputs,\n",
     "                                                               anwsers_num_words + 1,\n",
     "                                                               encoder_embedding_size,\n",
     "                                                               initializer = tf.random_uniform_initializer(0, 1))\n",
@@ -504,11 +504,11 @@
     "    decoder_embeddings_matrix = tf.Variable(tf.random_uniform([questions_num_words + 1, decoder_embedding_size], 0, 1))\n",
     "    training_predictions, test_predictions = decoder_rnn(decoder_embedded_input,\n",
     "                                                         decoder_embeddings_matrix,\n",
-    "                                                         decoder_state,\n",
+    "                                                         encoder_state,\n",
     "                                                         questions_num_words,\n",
     "                                                         sequence_length,\n",
     "                                                         rnn_size,\n",
-    "                                                         num_layer,\n",
+    "                                                         num_layers,\n",
     "                                                         questionswords2int,\n",
     "                                                         keep_prob,\n",
     "                                                         batch_size)\n",
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,8 +534,21 @@
     "epochs = 100 ## reduce if training takes to long\n",
     "batch_size = 64 ## include or decrease \n",
     "rnn_size = 512\n",
-    "num_layers =  "
+    "num_layers = 3\n",
+    "encoding_embedding_size = 512 ## 512 columns \n",
+    "decoding_embedding_size = 512\n",
+    "learning_rate = 0.01\n",
+    "learning_rate_decay = 0.9\n",
+    "min_learning_rate = 0.0001\n",
+    "keep_probability = 0.5"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
