Further clean up of doc. Jupyter notebook not oly for NLP section for testing and improving sorting function. nlp-moses.py is now the main doc file. Error corrected on this file now.

--- a/nlp-moses-notebook.ipynb
+++ b/nlp-moses-notebook.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import tensorflow as tf\n",
+    "import tensorflow as tf ## This must be tf version 1\n",
     "import time\n",
     "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,229 +326,6 @@
     "            sorted_clean_questions.append(questions_2_int[i[0]])\n",
     "            sorted_clean_answers.append(answers_2_int[i[0]])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "################################### Tensorflow section Below #########################################"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### The placeholder perm for model's inputs and targets\n",
-    "def model_inputs():\n",
-    "    inputs = tf.placeholder(tf.int32, [None, None], name = 'input')\n",
-    "    targets = tf.placeholder(tf.int32, [None, None], name = 'target')\n",
-    "    lr = tf.placeholder(tf.float32, name = 'learning_rate')\n",
-    "    keep_prob = tf.placeholder(tf.float32, name = 'keep_prob')\n",
-    "    return inputs, targets, lr, keep_prob\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### preprocessing targets\n",
-    "def preprocess_targets(targets, word2int, batch_size):\n",
-    "    left_side = tf.fill([batch_size, 1], word2int['<SOS>'])\n",
-    "    right_side = tf.strided_slice(targets, [0,0], [batch_size, -1], [1,1])\n",
-    "    preprocessed_targets = tf.concat([left_side, right_side], 1)\n",
-    "    return preprocessed_targets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Create the encoder RNN layer\n",
-    "def encoder_rnn(rnn_inputs, rnn_size, num_layers, keep_prob, sequence_length):\n",
-    "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
-    "    lstm_dropout = tf.contrib.rnn.DropoutWrapper(lstm, input_keep_prob = keep_prob)\n",
-    "    encoder_cell = tf.contrib.rnn.MultiRNNCell([lstm_dropout] * num_layers)\n",
-    "    _, encoder_state = tf.nn.bidirectional_dynamic_rnn(cell_fw = encoder_cell, \n",
-    "                                                       cell_bw = encoder_cell,\n",
-    "                                                       sequence_length = sequence_length,\n",
-    "                                                       inputs = rnn_inputs,\n",
-    "                                                       dtype = tf.float32)\n",
-    "    return encoder_state\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### First part of three... ###\n",
-    "### Decoding the training set\n",
-    "def decode_training_set(encoder_state, decoder_cell, decoder_embedded_input, sequence_length, decoding_scope, output_function, keep_prob, batch_size):\n",
-    "    attention_states = tf.zeros([batch_size, 1, decoder_cell.output_size])\n",
-    "    attention_keys, attention_values, attention_score_function, attention_construct_function = tf.contrib.seq2seq.prepare_attention(attention_states, attention_option = 'bahdanau', num_units = decoder_cell.output_size)\n",
-    "    training_decoder_function = tf.contrib.seq2seq.attention_decoder_fn_train(encoder_state[0], \n",
-    "                                                                              attention_keys, \n",
-    "                                                                              attention_values, \n",
-    "                                                                              attention_score_function, \n",
-    "                                                                              attention_construt_function,\n",
-    "                                                                              name = 'attn_dec_train')\n",
-    "    decoder_output, _, _ = tf.contrib.seq2seq.dynamic_rnn_decoder(decoder_cell,\n",
-    "                                                                  training_decoder_function,\n",
-    "                                                                  decoder_embedded_input,\n",
-    "                                                                  sequence_length,\n",
-    "                                                                  scope = decoding_scope)\n",
-    "    decoder_output_dropout = tf.nn.dropout(decoder_output, keep_prob)\n",
-    "    return output_function(decoder_output_dropout)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Second part of three ###\n",
-    "### Decoding the test/valuation set \n",
-    "def decode_test_set(encoder_state, decoder_cell, decoder_embeddings_matrix, sos_id, eos_id, maximum_length, num_words, sequence_length, decoding_scope, output_function, keep_prob, batch_size):\n",
-    "    attention_states = tf.zeros([batch_size, 1, decoder_cell.output_size])\n",
-    "    attention_keys, attention_values, attention_score_function, attention_construct_function = tf.contrib.seq2seq.prepare_attention(attention_states, attention_option = 'bahdanau', num_units = decoder_cell.output_size)\n",
-    "    test_decoder_function = tf.contrib.seq2seq.attention_decoder_fn_inference(output_function,\n",
-    "                                                                              encoder_state[0], \n",
-    "                                                                              attention_keys, \n",
-    "                                                                              attention_values, \n",
-    "                                                                              attention_score_function, \n",
-    "                                                                              attention_construct_function,\n",
-    "                                                                              decoder_embeddings_matrix, \n",
-    "                                                                              sos_id, \n",
-    "                                                                              eos_id, \n",
-    "                                                                              maximum_length, \n",
-    "                                                                              num_words,\n",
-    "                                                                              name = 'attn_dec_inf')\n",
-    "    test_predictions, _, _ = tf.contrib.seq2seq.dynamic_rnn_decoder(decoder_cell,\n",
-    "                                                                  test_decoder_function,\n",
-    "                                                                  scope = decoding_scope)\n",
-    "\n",
-    "    return test_predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Third part of three ###\n",
-    "### Creating the decoder RNN\n",
-    "def decoder_rnn(decoder_embedded_input, decoder_embeddings_matrix, encoder_state, num_words, sequence_length, rnn_size, num_layers, words2int, keep_prob, batch_size):\n",
-    "    with tf.variable_scope(\"decoding\") as decoding_scope:\n",
-    "        lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
-    "        lstm_dropout = tf.contrib.rnn.DropoutWrapper(lstm, input_keep_prob = keep_prob)\n",
-    "        decoder_cell = tf.contrib.rnn.MultiRNNCell([lstm_dropout] * num_layers)\n",
-    "        weights = tf.truncated_normal_initializer(stddev = 0.1)\n",
-    "        biases = tf.zeros_initializer()\n",
-    "        output_function = lambda x: tf.contrib.layers.fully_connected(x,\n",
-    "                                                                      num_words,\n",
-    "                                                                      None,\n",
-    "                                                                      scope = decoding_scope,\n",
-    "                                                                      weights_initializer = weights,\n",
-    "                                                                      biases_initializer = biases)\n",
-    "        training_predictions = decode_training_set(encoder_state,\n",
-    "                                                   decoder_cell,\n",
-    "                                                   decoder_embedded_input,\n",
-    "                                                   sequence_length,\n",
-    "                                                   decoding_scope,\n",
-    "                                                   output_function,\n",
-    "                                                   keep_prob,\n",
-    "                                                   batch_size)\n",
-    "        decoding_scope.reuse_variables()\n",
-    "        test_predictions = decode_test_set(encoder_state,\n",
-    "                                           decoder_cell,\n",
-    "                                           decoder_embeddings_matrix,\n",
-    "                                           word2int['<SOS>'],\n",
-    "                                           word2int['<EOS>'],\n",
-    "                                           sequence_length - 1,\n",
-    "                                           num_words,\n",
-    "                                           decoding_scope,\n",
-    "                                           output_function,\n",
-    "                                           keep_prob,\n",
-    "                                           batch_size)\n",
-    "    return training_predictions, test_predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Building the seq2seq model\n",
-    "def seq2seq_model(inputs, targets, keep_prob, batch_size, sequence_length, anwsers_num_words, questions_num_words, encoder_embedding_size, decoder_embedding_size, rnn_size, num_layers, questionswords2int):\n",
-    "    encoder_embedded_input = tf.contrib.layers.embed_sequence(inputs,\n",
-    "                                                               anwsers_num_words + 1,\n",
-    "                                                               encoder_embedding_size,\n",
-    "                                                               initializer = tf.random_uniform_initializer(0, 1))\n",
-    "    \n",
-    "    encoder_state = encoder_rnn(encoder_embedded_input, rnn_size, num_layers, keep_prob, sequence_length)\n",
-    "    preprocessed_targets = preprocess_targets(targets, questionswords2int, batch_size)\n",
-    "    decoder_embeddings_matrix = tf.Variable(tf.random_uniform([questions_num_words + 1, decoder_embedding_size], 0, 1))\n",
-    "    training_predictions, test_predictions = decoder_rnn(decoder_embedded_input,\n",
-    "                                                         decoder_embeddings_matrix,\n",
-    "                                                         encoder_state,\n",
-    "                                                         questions_num_words,\n",
-    "                                                         sequence_length,\n",
-    "                                                         rnn_size,\n",
-    "                                                         num_layers,\n",
-    "                                                         questionswords2int,\n",
-    "                                                         keep_prob,\n",
-    "                                                         batch_size)\n",
-    "    return training_predictions, test_predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "################################### Training seq2seq model #########################################"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Using the Hyperparameters \n",
-    "epochs = 100 ## reduce if training takes to long\n",
-    "batch_size = 64 ## include or decrease \n",
-    "rnn_size = 512\n",
-    "num_layers = 3\n",
-    "encoding_embedding_size = 512 ## 512 columns \n",
-    "decoding_embedding_size = 512\n",
-    "learning_rate = 0.01\n",
-    "learning_rate_decay = 0.9\n",
-    "min_learning_rate = 0.0001\n",
-    "keep_probability = 0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
